syntax = "proto3";

package shorter;

service shorterService {
    rpc Create (createRequest) returns (createResponse) {}
    rpc Get (getRequest) returns (getResponse) {}
}

message createRequest {
    string longURL = 1;
}

message createResponse {
    string shortURL = 1;
}

message getRequest {
    string shortURL = 1;
}

message getResponse {
    string longURL = 1;
}


